--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.3.4",
     "graphql": "^16.6.0",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
