--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "antd": "^4.21.5",
+    "apollo-angular": "^4.2.1",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
     "next": "12.1.0",
